Fixed navbar on mobile + widget glitches for mobile

--- a/app.css
+++ b/app.css
@@ -13591,5 +13591,5 @@ figcaption {
 */
 
 iframe {
-    min-height: 90vh;
+    max-height: 90vh;
 }
